<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Raspored</string>
    <string name="notification_channel_appointments_name">Predavanja</string>
    <string name="notification_channel_appointments_description">Obavijesti o početku predavanja</string>
    <string name="notification_appointments_text">Predavanje počinje za 30 minuta</string>
    <string name="notification_channel_changes_name">Izmjene rasporeda</string>
    <string name="notification_channel_changes_description">Obavijesti o izmjenama raspored</string>
    <string name="notification_changes_title">Izmjena raspored</string>
    <string name="notification_changes_text">Došlo je do izmjena na rasporedu</string>
    <string name="main_view_menu_settings_title">Postavke</string>
    <string name="main_view_menu_now_title">Pokaži današnji dan</string>
    <string name="main_view_menu_refresh_title">Osvježi</string>
    <string name="main_view_menu_browser_title">Otvori URL</string>
    <string name="main_view_appointment_info_dialog_title">Informacije</string>
    <string name="main_view_appointment_info_dialog_name_label">Ime: </string>
    <string name="main_view_appointment_info_dialog_details_label">Detalji: </string>
    <string name="main_view_appointment_info_dialog_time_label">Vrijeme: </string>
    <string name="main_view_appointment_info_dialog_classroom_label">Učionica: </string>
    <string name="main_view_appointment_info_dialog_lecturer_label">Predavač: </string>
    <string name="main_view_appointments_list_empty_day">Nema predavanja</string>
    <string name="settings_view_toolbar_title">Postavke</string>
    <string name="settings_view_list_value_course">Studij</string>
    <string name="settings_view_list_value_course_required">Morate odabrati studij</string>
    <string name="settings_view_list_value_course_partial">Parcijalni studij</string>
    <string name="settings_view_list_value_course_default">Godina studija nije odabrana</string>
    <string name="settings_view_list_value_partial">Parcijalni predmeti</string>
    <string name="settings_view_list_value_partial_default">Parcijalni predmeti nisu odabrani</string>
    <string name="settings_view_list_value_partial_add">Dodaj</string>
    <string name="settings_view_list_value_partial_empty">Nema parcijalnih predmeta</string>
    <string name="settings_view_list_value_blocked">Izbačeni predmeti</string>
    <string name="settings_view_list_value_blocked_default">Izbačeni predmeti nisu odabrani</string>
    <string name="settings_view_list_value_blocked_empty">Nema izbačenih predmeta</string>
    <string name="settings_view_list_value_blocked_add">Izbaci</string>
    <string name="settings_view_list_value_notifications">Obavijesti</string>
    <string name="settings_view_list_value_notifications_default">Podsjetnici za početak predavanja</string>
    <string name="settings_view_list_value_autosync">Automatska sinkronizacija</string>
    <string name="settings_view_list_value_autosync_default">Sinkroniziraj izmjene rasporeda automatski</string>
    <string name="settings_view_list_value_calendar_sync">Sinkroniziraj sa kalendarom</string>
    <string name="settings_view_list_value_calendar_sync_default">Automatski dodaj predavanja u kalendar</string>
    <string name="settings_view_list_value_calendar_sync_not_found">Ne mogu pronaći kalendar</string>
    <string name="settings_view_saving_failed">Greška prilikom spremanja</string>
    <string name="settings_view_appointments_filter_list">Popis predmeta</string>
    <string name="settings_view_course_selection_cancel">Poništi</string>
    <string name="settings_view_save">Spremi</string>
    <string name="settings_view_appointment_selection">Odaberi predmet</string>
    <string name="settings_view_course_selection">Odaberi studij</string>
    <string name="spinner_default">Odaberi…</string>
    <string name="day_of_week_monday">Ponedjeljak</string>
    <string name="day_of_week_tuesday">Utorak</string>
    <string name="day_of_week_wednesday">Srijeda</string>
    <string name="day_of_week_thursday">Četvrtak</string>
    <string name="day_of_week_friday">Petak</string>
    <string name="day_of_week_saturday">Subota</string>
    <string name="day_of_week_sunday">Nedjelja</string>
    <string name="request_permission_rationale">Dopusti pristup kalendaru</string>
    <string name="request_permission_rationale_positive">Da</string>
    <string name="request_permission_rationale_negative">Ne</string>
    <string name="request_error_internet">Nema internetske veze</string>
    <string name="request_error_server">Server nije dostupan</string>
    <string name="request_error_internal">Došlo je do greške pokušajte ponovno</string>
    <string name="request_error_out_of_sync">Moguće kašnjenje rasporeda</string>
</resources>