<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/settings_view_appointments_filter_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settings_view_appointments_filter_toolbar_back"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="start|center_vertical"
            android:background="?android:attr/actionBarItemBackground"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/colorOnPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings_view_appointments_filter_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="?android:attr/actionBarSize"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/toolbar_text_padding"
            android:paddingEnd="@dimen/toolbar_text_padding"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/toolbar_text_size"
            android:textStyle="bold"
            tools:text="Title" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_view_appointments_filter_course_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/margin_between_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_view_appointments_filter_toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settings_view_appointments_filter_course_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/settings_view_list_item_icon_margin"
            android:padding="@dimen/settings_view_list_item_icon_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/settings_view_course_select_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_course"
            app:tint="@color/colorOnBackground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings_view_appointments_filter_course_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_view_list_item_icon_margin"
            android:gravity="start"
            android:padding="@dimen/settings_view_list_item_text_padding"
            android:text="@string/settings_view_list_value_course_partial"
            android:textColor="@color/colorOnBackground"
            android:textSize="@dimen/settings_view_list_item_primary_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_view_appointments_filter_course_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings_view_appointments_filter_course_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_view_list_item_icon_margin"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="start"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="@dimen/settings_view_list_item_text_padding"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/settings_view_list_value_course_default"
            android:textColor="@color/colorOnBackgroundLight"
            android:textSize="@dimen/settings_view_list_item_secondary_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_view_appointments_filter_course_icon"
            app:layout_constraintTop_toBottomOf="@+id/settings_view_appointments_filter_course_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/settings_view_course_select_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.17" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_between_views"
        android:gravity="start|center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/settings_view_appointments_filter_list"
        android:textColor="@color/colorOnBackground"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/settings_view_appointments_filter_add"
        app:layout_constraintEnd_toStartOf="@+id/settings_view_appointments_filter_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_view_appointments_filter_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_view_appointments_filter_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_views"
        android:text="@string/settings_view_list_value_partial_add"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_view_appointments_filter_course_select" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_between_views"
        app:cardBackgroundColor="@color/colorBackgroundLight"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_view_appointments_filter_add">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settings_view_appointments_filter_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings_view_appointments_filter_list_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_view_list_value_partial_empty"
            android:textColor="@color/colorOnBackgroundLight"
            android:textSize="@dimen/settings_view_list_item_secondary_text_size" />

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>